[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/main/title/CreditsScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/monogram.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/monogram_credits.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/ui/gray_panel_screws_stylebox.tres" type="StyleBox" id=5]

[node name="CreditsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 50.0
margin_top = 30.0
margin_right = 1230.0
margin_bottom = 690.0

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 1180.0
margin_bottom = 52.0
text = "CREDITS_TITLE"
align = 1
uppercase = true

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 1180.0
margin_bottom = 660.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ScrollContainer"]
margin_right = 1180.0
margin_bottom = 604.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CreditsTeam" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 1180.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "CREDITS"
tab_size = 2
text = "CREDITS"
fit_content_height = true
scroll_active = false

[node name="CreditsLegal" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 304.0
margin_right = 1180.0
margin_bottom = 604.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "ENGINE_LICENSE_INFO"
tab_size = 2
text = "ENGINE_LICENSE_INFO"
fit_content_height = true
scroll_active = false

[connection signal="meta_clicked" from="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/CreditsTeam" to="." method="_on_Credits_meta_clicked"]
[connection signal="meta_clicked" from="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/CreditsLegal" to="." method="_on_Credits_meta_clicked"]
